Fixed text sizes on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,6 +130,12 @@ h2{
 }
 
 @media(max-width:1024px){
+  *{
+    font-size: 40px;
+  }
+h1 h2 h3 h4 h5{
+  font-size: 1rem;
+}
   #mainNavigation{
     padding: 1rem 0;
     margin: 0;
@@ -168,5 +174,10 @@ h2{
   #mainHeader{
     padding: 0;
     text-align: left;
+  }
+  @media(max-height: 1000px){
+    #templateAside{
+      display: none;
+    }
   }
 }
